

syntax="proto3";

option java_multiple_files = true;
option java_package = "cn.atali.curd.SystemObject";
option java_outer_classname = "SystemObjectProto";
option objc_class_prefix = "SystemObjectSRV";

package curd;
option go_package = "./;curd";

import "curd_common.proto";



service SystemObject{
    rpc Add(SystemObjectInfo)returns(CommonResponse){}
    rpc Update(SystemObjectInfo)returns(CommonResponse){}
    rpc Delete(DelRequest)returns(CommonResponse){}
    rpc Query(QuerySystemObjectRequest)returns(QuerySystemObjectResponse){}
    rpc GetAll(GetAllSystemObjectRequest)returns(GetAllSystemObjectResponse){}
    rpc GetDetail(GetDetailRequest)returns(GetSystemObjectDetailResponse){}
    rpc Copy(GetDetailRequest)returns(CommonResponse){}
    rpc Enable(EnableRequest)returns(CommonResponse){}
}

message SystemObjectInfo {
    string id=1;
	//是否启用 
 	bool enable=2;
	//名称 
 	string name=3;
	//显示名称 
 	string displayName=4;
	//编程语言 
 	string language=5;
	//类型 1-类 2-结构体 3-方法 4-代码
 	int32 type=6;
	//代码 
 	string code=7;
	//备注 
 	string description=8;
}

message QuerySystemObjectRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
	//是否启用 
    // @inject_tag: uri:"enable" form:"enable"
    int32 enable=4;
	//名称 
    // @inject_tag: uri:"name" form:"name"
    string name=5;
	//编程语言 
    // @inject_tag: uri:"language" form:"language"
    string language=7;
	//类型 1-类 2-结构体 3-方法 4-代码
    // @inject_tag: uri:"type" form:"type"
    int32 type=8;
}

message QuerySystemObjectResponse{
    Code code=1;
    string message=2;
    repeated SystemObjectInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}
message GetAllSystemObjectRequest{
    //是否启用 
    // @inject_tag: uri:"enable" form:"enable"
    bool enable=1;
	//名称 
    // @inject_tag: uri:"name" form:"name"
    string name=2;
	//编程语言 
    // @inject_tag: uri:"language" form:"language"
    string language=3;
	//类型 1-类 2-结构体 3-方法 4-代码
    // @inject_tag: uri:"type" form:"type"
    int32 type=4;
}
message GetAllSystemObjectResponse{
    Code code=1;
    string message=2;
    repeated SystemObjectInfo data=3;
}

message GetSystemObjectDetailResponse{
    Code code=1;
    string message=2;
    SystemObjectInfo data=3;
}